Sugati/src/objects/Introduction_Image__c.object
<CustomObject>
    <fields>
        <fullName>II_Attachement_Id__c</fullName>
        <label>Attachement Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>II_Image__c</fullName>
        <formula>IMAGE(&apos;/servlet/servlet.FileDownload?file=&apos;&amp; II_Attachement_Id__c , &apos; &apos;,70,100)</formula>
        <label>Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>II_Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Introduction Images</relationshipLabel>
        <relationshipName>Introduction_Images</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>II_Selected_Content_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Selected Content Category</label>
        <referenceTo>Selected_Itinerary_Content_Category__c</referenceTo>
        <relationshipLabel>Introduction Images</relationshipLabel>
        <relationshipName>Introduction_Images</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Introduction Image</label>
    <nameField>
        <displayFormat>IIN-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Introduction Images</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>